...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g2G-eI-AK8">
                                <rect key="frame" x="20" y="565" width="110" height="56"/>
                                <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <action selector="loadPreviousExercise:" destination="iHf-8d-3dq" eventType="touchUpInside" id="Z0u-0m-Kvf"/>
                                </connections>
...
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="done:" destination="FBp-HY-98S" eventType="touchUpInside" id="nPR-Mh-m6u"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="1FM-Sx-QUa" firstAttribute="trailing" secondItem="tgm-qc-LDn" secondAttribute="trailing" constant="50" id="6jl-g2-diO"/>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r6M-8C-LSg">
                                <rect key="frame" x="20" y="192" width="335" height="68"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="30 Min">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="Min30:" destination="sZq-Jh-1cx" eventType="touchUpInside" id="fG7-tE-ZWQ"/>
                                </connections>
                            </button>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Xn-3r-rXu">
                                <rect key="frame" x="20" y="404" width="335" height="56"/>
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Generate workout">
                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
                                <connections>
                                    <segue destination="Dcn-S4-PUi" kind="show" id="4rz-2Z-tKE"/>
                                </connections>
                            </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ucb-10-6I5">
                                <rect key="frame" x="20" y="144" width="335" height="68"/>
                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Generate Workout"/>
                                <connections>
                                    <action selector="goToGenerateWorkout:" destination="tZg-rk-9cI" eventType="touchUpInside" id="2rW-yY-676"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0oG-DG-q5A">
                                <rect key="frame" x="20" y="262" width="335" height="68"/>
...
                        <barButtonItem key="backBarButtonItem" title="Exit" id="w4f-8g-fC2"/>
                    </navigationItem>
                    <connections>
                        <outlet property="buttonCustomWorkout" destination="0oG-DG-q5A" id="6Cs-sE-VwM"/>
                        <outlet property="buttonGenerateWorkout" destination="Ucb-10-6I5" id="qMN-J3-wMW"/>
                        <outlet property="buttonProfile" destination="5Wl-gO-Pjz" id="ilh-co-gVo"/>
                        <segue destination="iHf-8d-3dq" kind="show" identifier="startWorkout" id="HeN-sw-0x3"/>
                        <segue destination="BYZ-38-t0r" kind="show" identifier="generateWorkout" id="SSQ-Ts-fxe"/>
                        <segue destination="Hec-KY-fAM" kind="show" identifier="goToCustomWorkout" id="RaG-E3-HuY"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="E5V-Yv-gAj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
