...
        //Determining which bodyparts are present in the selection
        determineBodyParts(list: selectedExercises)
        let alert = UIAlertController(title: "Choose workout type", message: "This wil affect the number of reps", preferredStyle: .actionSheet)
        
        //an alert where you choose what type of training you want
        alert.addAction(UIAlertAction(title: "Bodybuilding", style: .default, handler: { _ in
            self.workoutType = "bodybuilding"
            self.sendDataAndGoToWorkout()
        }))
        
        alert.addAction(UIAlertAction(title: "Strength", style: .default, handler: { _ in
            self.workoutType = "strength"
            self.sendDataAndGoToWorkout()
...
            if exercise.exerciseBPart == "chest" && !chestAdded{
                workoutBodyParts.append("chest")
                chestAdded = true
            }else if exercise.exerciseBPart == "back" && !backAdded {
                workoutBodyParts.append("back")
                backAdded = true
            }else if exercise.exerciseBPart == "legs" && !legsAdded {
                workoutBodyParts.append("legs")
                legsAdded = true
            }else if exercise.exerciseBPart == "arms" && !armsAdded {
                workoutBodyParts.append("arms")
                armsAdded = true
            }
...
